<resources>
    <string name="app_name">Notes</string>
    <string name="note">Note</string>
    <string name="notes">Notes</string>
    <string name="to_dos">To-dos</string>
    <string name="add_note">Add note</string>
    <string name="title">Title</string>
    <string name="starred">Starred</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="note_toast_text">Please enter a title and a note</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="search_note">Search note</string>
    <string name="star_unstar">Star/unstar</string>
    <string name="note_deleted">Note deleted</string>
    <string name="search_to_do">Search to-do</string>
    <string name="add_to_do">Add to-do</string>
    <string name="to_do">To-do</string>
    <string name="to_do_deleted">To-do deleted</string>
    <string name="content">Content</string>
    <string name="to_do_toast_text">Please, enter the content of the to-do</string>
    <string name="note_starred">Note starred</string>
    <string name="note_unstarred">Note unstarred</string>
    <string name="to_do_starred">To-do starred</string>
    <string name="to_do_unstarred">To-do unstarred</string>
    <string name="delete">Delete</string>
    <string name="take_photo">Take a photo</string>
    <string name="picture">Picture</string>
    <string name="camera_permission_denied">Camera permission required to take a photo!</string>
    <string name="note_image">Note image</string>
    <string name="category">Category</string>
    <string name="category_name">Category name</string>
    <string name="color_code">Color code (HEX)</string>
</resources>