<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddNoteActivity">

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="32sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_note"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/add_note"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxWidth="488dp"
        android:padding="8dp"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/iv_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/picture" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_take_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_gravity="end"
        android:backgroundTint="@color/grey900"
        android:contentDescription="@string/take_photo"
        android:src="@drawable/baseline_add_a_photo_24" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/b_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

    </LinearLayout>
</LinearLayout>