<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/notes_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="@color/grey900"

                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:padding="8dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_star"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/starred"
                android:src="@drawable/baseline_star_24"
                android:visibility="invisible" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="10"

            android:padding="8dp"
            android:text="@string/note"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"

            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="10"
            android:padding="8dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
