<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".AddCategoryActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        android:elevation="8dp"
        android:backgroundTint="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_category_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/category_name"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                android:padding="8dp"
                android:textSize="32sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_category_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/color_code"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                android:textSize="24sp"
                android:padding="8dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_back"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/back"
            android:src="@drawable/baseline_arrow_back_24" />

        <ImageButton
            android:id="@+id/btn_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/done"
            android:src="@drawable/baseline_done_24" />
    </LinearLayout>

</LinearLayout>