<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:orientation="vertical"
    tools:context=".NotesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.cardview.widget.CardView
            android:id="@+id/notes_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:background="@color/grey900"

                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:padding="8dp"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text="@string/title"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/iv_pin"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/starred"
                        android:src="@drawable/baseline_star_24"
                        android:visibility="invisible" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="10"

                    android:padding="8dp"
                    android:text="@string/notes"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"

                    android:marqueeRepeatLimit="marquee_forever"
                    android:maxLines="10"
                    android:padding="8dp"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <ImageButton
            android:id="@+id/addNoteButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            android:background="@drawable/round_button_background"
            android:contentDescription="@string/add_note"
            android:src="@drawable/baseline_add_24" />
    </LinearLayout>
</LinearLayout>